# eo_optimizatio-

./: README.md  pyproject.toml  requirements.txt  run_pipeline.py
archive/: Blueprint_Utilities_Energy_Optimization.docx  Call with Parag and 2 others.docx  Data_butamer_case.xlsx  EO_Architecture_Blueprint.pptx  EO_Demo_Outline_PI_and_Inferred_Tags.docx  EO_Optimization_Philosophy.docx  EO_Pipeline_Colab.ipynb  EO_Pipeline_Colab_v2.ipynb  EO_Pipeline_Colab_v3.ipynb  EO_Pipeline_Full_Explanation.html  EO_Pipeline_Production_v1 (1).ipynb  EO_Pipeline_Production_v1 (2).ipynb  EO_Pipeline_Production_v1.ipynb  EO_Pipeline_RealData_v5.ipynb  EO_Pipeline_Walkthrough.html  Inferred_Tag_Engine_Documentation.docx  energy_optimization_blueprint.jsx  ods_alerts.csv  run_metadata.csv  seu_metrics.csv
eo_frontend/: database.py  eo_platform.db  main.py  models.py  requirements.txt  seed_data.py  services.py
eo_frontend/static/: index.html
eo_pipeline/: __init__.py  runner.py
eo_pipeline/config/: loader.py
eo_pipeline/pipelines/ccp_quality/: nodes.py
eo_pipeline/pipelines/inferred_engine/: nodes.py
eo_pipeline/pipelines/ingestion/: nodes.py
eo_pipeline/pipelines/ods_reporting/: nodes.py
eo_pipeline/pipelines/optimizer/: nodes.py
eo_pipeline/pipelines/optimizer_prep/: nodes.py
eo_pipeline/pipelines/post_optimizer/: nodes.py
eo_pipeline/pipelines/sub_model/: nodes.py
eo_pipeline/utils/: formula_engine.py
output/: ods_alerts.csv  run_metadata.json  seu_metrics.csv
sample_data/: EO_UN_FF_Rev_14.xlsx
