[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eo-pipeline"
version = "1.0.0"
description = "Generic Energy Optimization Pipeline — configuration-driven, plant-agnostic"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "networkx>=2.8.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
eo-pipeline = "eo_pipeline.runner:main"

[tool.setuptools.packages.find]
include = ["eo_pipeline*"]
